# LapTimerBLE

./: .gitignore  AGENTS.md  README.md  plan.md  shell.nix
firmware/: .gitignore  README.md  platformio.ini
firmware/src/: main.cpp
scanner/: README.md  pyproject.toml
scanner/src/laptimerble/: __init__.py  __main__.py  app.py  audio.py  config.py  scanner.py  timeutil.py
scanner/tests/: test_scanner.py  test_storage.py  test_timeutil.py
src/laptimerble/: __main__.py  app.py  config.py  export.py  models.py  scanner.py  storage.py
tests/: test_export.py  test_storage.py
