[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "laptimerble"
version = "0.1.0"
description = "BLE-driven lap timer for 1/10 scale RC cars"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Andrew Bowen" }]
dependencies = [
    "aioblescan>=0.2.14",
    "textual>=0.83",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
laptimerble = "laptimerble.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/laptimerble"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
